--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
